test_src/compiler_errors/types/binary/InvertFloatError.b
class InvertFloatError {
    void test() {
        println(~42.0);
    }
}
